fix spacing

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -15,7 +15,8 @@ img {
 
 .main-nav {
   list-style: none;
-  margin-top: -20px;
+  margin-top: -50px;
+  margin-bottom: 10px;
 }
 
 .main-nav li {
